# magmod

./: .gitignore  README.md  Template.hs  Util.hs  magmod.cabal  magmod.hs
Magento/: Block.hs  Controller.hs  Helper.hs  JS.hs  Layout.hs  Locale.hs  Model.hs  Module.hs  Observer.hs  Resource.hs  Setup.hs  Skin.hs  Template.hs
Magento/Layout/: XML.hs
Magento/Module/: Config.hs  Path.hs  Version.hs  XML.hs
Template/: Block.hs  Config.hs  Controller.hs  Helper.hs  Layout.hs  Locale.hs  Model.hs  Module.hs  Observer.hs  Resource.hs  Setup.hs  Template.hs
Util/: PHP.hs  XML.hs
templates/: block.php  config.xml  controller.php  controller.xml  helper.php  helper.xml  locale.xml  model.php  model.xml  module.xml  resource.php  resource.xml  resource_constructor.php
templates/block/: block.xml
templates/controller/: admin.php  admin.xml  frontend.php
templates/layout/: config.xml  controllers.xml  gen.xml  layout.xml
templates/module/: module.xml
templates/observer/: observer.php  observer.xml
templates/resource/: collection.php  entity.xml
templates/setup/: install.php  setup.xml  upgrade.php
