name:                magmod
version:             0.1.0.0
synopsis:            Magento module generator
homepage:            https://github.com/prasmussen/magmod
license:             MIT
license-file:        LICENSE
author:              Petter Rasmussen
maintainer:          petter.rasmussen@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable magmod
  main-is:             magmod.hs
  ghc-options:         -fforce-recomp
  build-depends:       base ==4.6.*,
                       time ==1.4.*,
                       directory ==1.2.*,
                       filepath ==1.3.*,
                       bytestring ==0.10.*,
                       split ==0.2.*,
                       mtl ==2.1.*,
                       utf8-string ==0.3.*,
                       MissingH ==1.2.*,
                       file-embed ==0.0.*,
                       hastache ==0.6.*,
                       hxt ==9.3.*,
                       hxt-xpath ==9.1.*,
                       filemanip ==0.3.*
