name:                magmod
version:             0.1.0.0
synopsis:            Magento module generator
homepage:            https://github.com/prasmussen/magmod
license:             MIT
license-file:        LICENSE
author:              Petter Rasmussen
maintainer:          petter.rasmussen@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable magmod
  main-is:             magmod.hs

  if os(linux)
      ghc-options:     -fforce-recomp -static -optc-static -optl-static -optl-pthread
  else
      ghc-options:     -fforce-recomp

  build-depends:       base ==4.*,
                       time ==1.*,
                       directory ==1.*,
                       filepath ==1.*,
                       bytestring ==0.*,
                       split ==0.*,
                       mtl ==2.*,
                       utf8-string ==0.*,
                       regex-posix ==0.*,
                       MissingH ==1.*,
                       file-embed ==0.*,
                       hastache ==0.*,
                       hxt ==9.*,
                       hxt-xpath ==9.*,
                       hxt-unicode ==9.*,
                       Glob ==0.*
